--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ easyocr==1.7.0
 numpy==1.23.1
 beautifulsoup4==4.9.3
 nltk==3.8.1
-gspread==5.9.0
+gspread==5.10.0
 oauth2client==4.1.3
 scikit-learn==1.2.2
 spacy==8.19.3
+en-core-web-md==3.6.0
+en-core-web-sm==3.6.0
