--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ nltk==3.8.1
 gspread==5.10.0
 oauth2client==4.1.3
 scikit-learn==1.2.2
-spacy>=2.2.0,<3.0.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.0/en_core_web_md-2.2.0.tar.gz#egg=en_core_web_sm
+spacy>=3.0.0,<4.0.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
