--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.12.2
 gspread==5.10.0
 oauth2client==4.1.3
 scikit-learn==1.2.2
+requests-oauthlib==1.3.1
 spacy
 en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0.tar.gz
 scipy==1.10.1
