--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gspread==5.10.0
 oauth2client==4.1.3
 scikit-learn==1.2.2
 requests-oauthlib==1.3.1
+pillow==9.5.0
 spacy
 en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0.tar.gz
 scipy==1.10.1
